<resources>
    <string name="app_name">Android</string>
    <string name="titolo">titolo</string>
    <string name="add_new_recipe">Add new Recipe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipe_title">Recipe title:</string>
    <string name="recipe_description">Recipe description:</string>
    <string name="recipe_ingredients">Recipe ingredients:</string>
    <string name="recipe_guidelines">Recipe guidelines:</string>
    <string name="recipe_image">Recipe image</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="save">Save</string>
    <string name="take_picture">Take Picture</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="ingredients">Ingredients</string>
    <string name="guidelines">Guidelines</string>
    <string name="guidelines_text">Guidelines</string>
    <string name="ingredients_text">Ingredients</string>
    <string name="description_text">Description</string>
    <string name="search_recipe_title">Search for a recipe title</string>
</resources>