<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRecipeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_title"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:layout_margin="10dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/title"
                    android:textSize="20dp"
                    android:id="@+id/recipe_title_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_description"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:layout_margin="10dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/description"
                    android:textSize="20dp"
                    android:id="@+id/recipe_description_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_ingredients"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:layout_margin="10dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/ingredients"
                    android:textSize="20dp"
                    android:id="@+id/recipe_ingredients_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_guidelines"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:layout_margin="10dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/guidelines"
                    android:textSize="20dp"
                    android:id="@+id/recipe_guidelines_text"/>
            </LinearLayout>

           <ImageView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:contentDescription="@string/recipe_image"
               android:src="@drawable/ic_baseline_list_alt_24"
               android:id="@+id/recipe_image_imageView"
               android:layout_margin="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_photo"
                    android:id="@+id/upload_photo"
                    android:layout_margin="10dp"/>
                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/take_picture"
                    android:id="@+id/take_photo"
                    android:layout_margin="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">
                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:layout_margin="10dp"
                    android:id="@+id/save_recipe" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>